fixed snackbar z-index

--- a/client/sass/_SnackBar.sass
+++ b/client/sass/_SnackBar.sass
@@ -6,6 +6,7 @@
   transform: translateY(100%)
   transition: transform .218s ease-in-out
   width: 100%
+  z-index: 2
 
   &.visible
     transform: translateY(0%)
